fix: Changed margin in about class to remove white space.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ body {
   width: 50%;
   padding: 20px;
   margin-left: 10vw;
-  margin-bottom: 20px;
+  margin-bottom: 17px;
   color: #fff;
   display: block;
   background-color: rgba(0, 0, 0, 0.6);
